test/elaboration/bad/coreml_invalid_type.mle
type 'a r1 = {e1 : 'a}
type r2 = {e2 : 'a}